Runnable testsuite, and a first test

--- a/tox.ini
+++ b/tox.ini
@@ -29,8 +29,8 @@ skip_install = true
 [testenv:tests]
 deps =
     Django
-    pytz
     coverage
+    psycopg2-binary
 changedir = {toxinidir}
 skip_install = true
 commands =
