--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ jobs:
       env: REQ=none
       install: skip
       script:
-        - pip install flake8
+        - pip install black flake8
         - flake8 .
+        - black --check tree_queries tests
