--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ python:
 - "3.5"
 - "3.4"
 addons:
-  mariadb: "10.3"
+  postgresql: "9.4"
+# TODO test on sqlite3 and MariaDB
+# mariadb: "10.3"
 env:
 - REQ="Django>=1.11,<2.0"
 - REQ="Django>=2.0,<2.1"
@@ -22,7 +24,8 @@ matrix:
       env: REQ="Django==2.1rc1"
 install:
 - pip install -U pip wheel
-- pip install $REQ mysqlclient
+- pip install $REQ psycopg2-binary
+# TODO mysqlclient
 - python setup.py install
 script: cd tests && ./manage.py test testapp && cd ..
 
