--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ matrix:
       env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
     - python: "3.4"
       env: REQ="Django==2.1rc1"
+  include:
+    - python: "3.6"
+      env:
+        - REQ="Django>=2.0,<2.1"
+        - DB="mysql"
+      addons:
+        mariadb: "10.3"
 install:
 - pip install -U pip wheel
 - pip install $REQ psycopg2-binary
