--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,7 @@ matrix:
         mariadb: "10.3"
 install:
 - pip install -U pip wheel
-- pip install $REQ psycopg2-binary
-# TODO mysqlclient
+- pip install $REQ mysqlclient psycopg2-binary
 - python setup.py install
 script: cd tests && ./manage.py test testapp && cd ..
 
