Python update for a hopefully newer sqlite3 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,14 +41,15 @@ jobs:
       script:
         cd tests && ./manage.py test testapp && cd ..
     - stage: sqlite3
+      python: "3.7-dev"
       env: DB=sqlite3
       install:
         - pip install -U pip wheel
-        - pip install "Django>=2.0,<2.1"
+        - pip install "Django==2.1rc1"
         - python setup.py install
       script:
-        python -c "import sqlite3;print(sqlite3.sqlite_version_info)"
-        cd tests && ./manage.py test testapp && cd ..
+        - python -c "import sqlite3;print(sqlite3.sqlite_version_info)"
+        - cd tests && ./manage.py test testapp && cd ..
     - stage: style
       env: REQ=none
       install: skip
