Run sqlite3 tests only locally for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,16 +40,17 @@ jobs:
         - python setup.py install
       script:
         cd tests && ./manage.py test testapp && cd ..
-    - stage: sqlite3
-      python: "3.7-dev"
-      env: DB=sqlite3
-      install:
-        - pip install -U pip wheel
-        - pip install "Django==2.1rc1"
-        - python setup.py install
-      script:
-        - python -c "import sqlite3;print(sqlite3.sqlite_version_info)"
-        - cd tests && ./manage.py test testapp && cd ..
+# sqlite3 version on Travis CI does not support CTEs yet
+#     - stage: sqlite3
+#       python: "3.7-dev"
+#       env: DB=sqlite3
+#       install:
+#         - pip install -U pip wheel
+#         - pip install "Django==2.1rc1"
+#         - python setup.py install
+#       script:
+#         - python -c "import sqlite3;print(sqlite3.sqlite_version_info)"
+#         - cd tests && ./manage.py test testapp && cd ..
     - stage: style
       env: REQ=none
       install: skip
