--- a/tox.ini
+++ b/tox.ini
@@ -36,3 +36,15 @@ skip_install = true
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage html
+
+[testenv:tests-sqlite3]
+deps =
+    Django
+    coverage
+changedir = {toxinidir}
+skip_install = true
+setenv =
+    DB=sqlite3
+commands =
+    coverage run tests/manage.py test -v 2 {posargs:testapp}
+    coverage html
