--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
 - pip install -U pip wheel
 - pip install $REQ psycopg2-binary
 - python setup.py install
-script: cd tests && ./manage.py test testapp && cd ..
+script: cd tests && ./manage.py test -v 2 testapp && cd ..
 
 jobs:
   include:
@@ -40,7 +40,7 @@ jobs:
         - pip install "Django>=2.0,<2.1" mysqlclient
         - python setup.py install
       script:
-        cd tests && ./manage.py test testapp && cd ..
+        cd tests && ./manage.py test -v 2 testapp && cd ..
 # sqlite3 version on Travis CI does not support CTEs yet
 #     - stage: sqlite3
 #       python: "3.7-dev"
