--- a/.travis.yml
+++ b/.travis.yml
@@ -46,11 +46,11 @@ jobs:
       env: DB=sqlite3
       install:
         - pip install -U pip wheel
-        - pip install git+git://github.com/karlb/pysqlite3
+        - pip install https://github.com/karlb/pysqlite3/archive/master.zip
         - pip install "Django>=2.1,<2.2"
         - python setup.py install
       script:
-        - cd tests && ./manage.py test testapp && cd ..
+        - cd tests && ./manage.py test -v 2 testapp && cd ..
     - stage: style
       env: REQ=none
       install: skip
