Allow ordering by string fields

--- a/tox.ini
+++ b/tox.ini
@@ -48,3 +48,16 @@ setenv =
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage html
+
+[testenv:tests-mariadb]
+deps =
+    Django
+    coverage
+    mysqlclient
+changedir = {toxinidir}
+skip_install = true
+setenv =
+    DB=mariadb
+commands =
+    coverage run tests/manage.py test -v 2 {posargs:testapp}
+    coverage html
