Do not sort 110 before 20

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ skip_install = true
 # skip_install = true
 # whitelist_externals = make
 
-[testenv:tests]
+[testenv:tests-pg]
 deps =
     Django
     coverage
