--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ matrix:
         - pip install Django
         - python setup.py install
     - python: 3.7
-      env: REQ=none
+      env: REQ="black flake8"
       install: skip
       script:
         - pip install black flake8
