--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ matrix:
     - python: 3.7
       env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
     - python: 3.7
-      env: REQ="Django>=2.2a1,<3.0"
+      env: REQ="Django>=2.2,<3.0"
     - python: 3.6
-      env: REQ="Django>=2.2a1,<3.0"
+      env: REQ="Django>=2.2,<3.0"
     - python: 3.5
-      env: REQ="Django>=2.2a1,<3.0"
+      env: REQ="Django>=2.2,<3.0"
     - python: 3.7
       env: REQ="Django>=2.1,<2.2"
     - python: 3.7
