--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ matrix:
     - python: 3.7
       env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
     - python: 3.7
+      env: REQ="Django>=3.0rc1,<3.1"
+    - python: 3.6
+      env: REQ="Django>=3.0rc1,<3.1"
+    - python: 3.7
       env: REQ="Django>=2.2,<3.0"
     - python: 3.6
       env: REQ="Django>=2.2,<3.0"
