--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     black
 changedir = {toxinidir}
 commands =
-    black tree_queries tests
+    black setup.py tree_queries tests
     flake8 .
 skip_install = true
 
