--- a/tox.ini
+++ b/tox.ini
@@ -14,20 +14,13 @@ commands =
     flake8 .
 skip_install = true
 
-# [testenv:docs]
-# deps =
-#     Sphinx
-#     Django
-#     django-ckeditor
-#     django-content-editor
-#     django-cte-forest
-#     django-imagefield
-#     html-sanitizer
-#     requests
-# changedir = docs
-# commands = make html
-# skip_install = true
-# whitelist_externals = make
+[testenv:docs]
+deps =
+    Sphinx
+changedir = docs
+commands = make html
+skip_install = true
+whitelist_externals = make
 
 [testenv:tests-pg]
 deps =
