Django 3.1 is final

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ jobs:
     - python: 3.8
       env: REQ="https://github.com/django/django/archive/master.zip#egg=Django"
     - python: 3.8
-      env: REQ="Django>=3.1rc1,<3.2"
+      env: REQ="Django>=3.1,<3.2"
     - python: 3.7
-      env: REQ="Django>=3.1rc1,<3.2"
+      env: REQ="Django>=3.1,<3.2"
     - python: 3.6
-      env: REQ="Django>=3.1rc1,<3.2"
+      env: REQ="Django>=3.1,<3.2"
     - python: 3.7
       env: REQ="Django>=3.0,<3.1"
     - python: 3.6
