Print converage in the console

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ changedir = {toxinidir}
 skip_install = true
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage html
+    coverage report -m
 
 [testenv:tests-sqlite3]
 deps =
@@ -43,7 +43,7 @@ setenv =
     DB=sqlite3
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage html
+    coverage report -m
 
 [testenv:tests-mariadb]
 deps =
@@ -56,4 +56,4 @@ setenv =
     DB=mariadb
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage html
+    coverage report -m
