--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,60 @@
+# [tox]
+# envlist = style,tests-pg,tests-sqlite3,tests-mariadb
+#
+# [testenv]
+# basepython = python3
+#
+# [testenv:style]
+# deps =
+#     flake8
+#     black
+# changedir = {toxinidir}
+# commands =
+#     black setup.py tree_queries tests
+#     flake8 .
+# skip_install = true
+#
+# [testenv:docs]
+# deps =
+#     Sphinx
+# changedir = docs
+# commands = make html
+# skip_install = true
+# whitelist_externals = make
+#
+
 [tox]
-envlist = style,tests-pg,tests-sqlite3,tests-mariadb
+envlist =
+    py{36,37,38,39}-dj{11,22,30,31,master}
+    docs
+    style
+    tests-mariadb
+    tests-pg
 
 [testenv]
-basepython = python3
+usedevelop = true
+extras = tests
+setenv =
+    DB=sqlite3
+commands =
+    python -Wd {envbindir}/coverage run tests/manage.py test -v2 --keepdb {posargs:testapp}
+    coverage report -m
+deps =
+    dj11: Django>=1.11,<2.0
+    dj22: Django>=2.2,<3.0
+    dj30: Django>=3.0,<3.1
+    dj31: Django>=3.1,<3.2
+    djmaster: https://github.com/django/django/archive/master.tar.gz
 
 [testenv:style]
 deps =
-    flake8
     black
+    flake8
+    isort
 changedir = {toxinidir}
 commands =
-    black setup.py tree_queries tests
+    isort setup.py tree_queries tests
+    black .
     flake8 .
 skip_install = true
 
@@ -29,18 +73,8 @@ deps =
     psycopg2-binary
 changedir = {toxinidir}
 skip_install = true
-commands =
-    coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
-
-[testenv:tests-sqlite3]
-deps =
-    Django
-    coverage
-changedir = {toxinidir}
-skip_install = true
 setenv =
-    DB=sqlite3
+    DB = ""
 commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage report -m
