--- a/tox.ini
+++ b/tox.ini
@@ -1,93 +1,95 @@
-# [tox]
-# envlist = style,tests-pg,tests-sqlite3,tests-mariadb
-#
-# [testenv]
-# basepython = python3
-#
-# [testenv:style]
-# deps =
-#     flake8
-#     black
-# changedir = {toxinidir}
-# commands =
-#     black setup.py tree_queries tests
-#     flake8 .
-# skip_install = true
-#
-# [testenv:docs]
-# deps =
-#     Sphinx
-# changedir = docs
-# commands = make html
-# skip_install = true
-# whitelist_externals = make
-#
-
 [tox]
 envlist =
-    py{36,37,38,39}-dj{11,22,30,31,master}
     docs
     style
-    tests-mariadb
-    tests-pg
+    readme
+    py{27}-dj{111}-sqlite
+    py{36,37,38,39}-dj{22,30,31,master}-sqlite
+    py{36,37,38,39}-dj{22,30,31}-{postgresql,mysql}
 
 [testenv]
-usedevelop = true
-extras = tests
-setenv =
-    DB=sqlite3
-commands =
-    python -Wd {envbindir}/coverage run tests/manage.py test -v2 --keepdb {posargs:testapp}
-    coverage report -m
 deps =
-    dj11: Django>=1.11,<2.0
-    dj22: Django>=2.2,<3.0
-    dj30: Django>=3.0,<3.1
-    dj31: Django>=3.1,<3.2
+    dj111: Django==1.11.*
+    dj22: Django==2.2.*
+    dj30: Django==3.0.*
+    dj31: Django==3.1.*
+    dj32: Django>=3.2a1,<4.0
+    sqlite: mock
+    postgresql: psycopg2-binary
+    mysql: mysqlclient
     djmaster: https://github.com/django/django/archive/master.tar.gz
+    coverage
+passenv=
+    CI
+    DB_BACKEND
+    DB_NAME
+    DB_USER
+    DB_PASSWORD
+    DB_HOST
+    DB_PORT
+    GITHUB_*
+setenv =
+    PYTHONPATH = {toxinidir}
+    PYTHONWARNINGS = d
+    DB_NAME = {env:DB_NAME:tree_queries}
+    DB_USER = {env:DB_USER:tree_queries}
+    DB_HOST = {env:DB_HOST:localhost}
+    DB_PASSWORD =  {env:DB_PASSWORD:tree_queries}
+pip_pre = True
+commands =
+    coverage run tests/manage.py test -v 2 {posargs:testapp}
+    coverage report -m
+
+[testenv:py{36,37,38,39}-dj{22,30,31}-postgresql]
+setenv =
+    {[testenv]setenv}
+    DB_BACKEND = postgresql
+    DB_PORT = {env:DB_PORT:5432}
+
+[testenv:py{36,37,38,39}-dj{22,30,31}-mysql]
+setenv =
+    {[testenv]setenv}
+    DB_BACKEND = mysql
+    DB_PORT = {env:DB_PORT:3306}
+
+[testenv:py{36,37,38,39}-dj{22,30,31,master}-sqlite]
+setenv =
+    {[testenv]setenv}
+    DB_BACKEND = sqlite3
+    DB_NAME = ":memory:"
+
+[testenv:docs]
+commands = make -C {toxinidir}/docs html
+deps =
+    Sphinx
+allowlist_externals = make
 
 [testenv:style]
-deps =
-    black
-    flake8
-    isort
-changedir = {toxinidir}
 commands =
     isort setup.py tree_queries tests
     black .
     flake8 .
+deps =
+    black>=19.10b0
+    flake8
+    isort>=5.0.2
 skip_install = true
 
-[testenv:docs]
-deps =
-    Sphinx
-changedir = docs
-commands = make html
+[testenv:readme]
+commands = python setup.py check -r -s
+deps = readme_renderer
 skip_install = true
-whitelist_externals = make
 
-[testenv:tests-pg]
-deps =
-    Django
-    coverage
-    psycopg2-binary
-changedir = {toxinidir}
-skip_install = true
-setenv =
-    DB = ""
-commands =
-    coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
+[gh-actions]
+python =
+    2.7: py27
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
-[testenv:tests-mariadb]
-deps =
-    Django
-    coverage
-    mysqlclient
-changedir = {toxinidir}
-skip_install = true
-setenv =
-    DB=mariadb
-commands =
-    coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
+[gh-actions:env]
+DB_BACKEND =
+    mysql: mysql
+    postgresql: postgresql
+    sqlite3: sqlite
