--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ envlist =
     docs
     style
     readme
-    py{36,37,38,39}-dj{22,30,31,master}-sqlite
+    py{38,39}-dj{22,30,31,master}-sqlite
+    py{36,37,38,39}-dj{22,30,31}-sqlite
     py{36,37,38,39}-dj{22,30,31}-{postgresql,mysql}
 
 [testenv]
