Django 3.2 has been released, remove the 'mock' dependency

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,7 @@ envlist =
 deps =
     dj22: Django==2.2.*
     dj31: Django==3.1.*
-    dj32: Django>=3.2a1,<4.0
-    sqlite: mock
+    dj32: Django>=3.2,<4.0
     postgresql: psycopg2-binary
     mysql: mysqlclient
     djmain: https://github.com/django/django/archive/main.tar.gz
