--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,16 @@ envlist =
     docs
     style
     readme
-    py{38,39}-dj{22,31,32,main}-sqlite
-    py{36,37,38,39}-dj{22,31,32}-sqlite
-    py{36,37,38,39}-dj{22,31,32}-{postgresql,mysql}
+    py{36,37}-dj{22,31,32}-{sqlite,postgresql,mysql}
+    py{38,39}-dj{22,31,32,40,main}-{sqlite,postgresql,mysql}
+    py{310}-dj{40,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
     dj22: Django==2.2.*
     dj31: Django==3.1.*
     dj32: Django>=3.2,<4.0
+    dj40: Django>=4.0a1,<4.1
     postgresql: psycopg2-binary
     mysql: mysqlclient
     djmain: https://github.com/django/django/archive/main.tar.gz
@@ -37,19 +38,19 @@ commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage report -m
 
-[testenv:py{36,37,38,39}-dj{22,31,32}-postgresql]
+[testenv:py{36,37,38,39,310}-dj{22,31,32,40}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{36,37,38,39}-dj{22,31,32}-mysql]
+[testenv:py{36,37,38,39,310}-dj{22,31,32,40}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{36,37,38,39}-dj{22,31,32,main}-sqlite]
+[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
@@ -83,6 +84,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
+    3.10: py310
 
 [gh-actions:env]
 DB_BACKEND =
