--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       mariadb:
-        image: mariadb:10.3
+        image: mariadb
         env:
           MYSQL_ROOT_PASSWORD: tree_queries
         options: >-
@@ -80,7 +80,7 @@ jobs:
 
     services:
       postgres:
-        image: 'postgres:9.5'
+        image: postgres
         env:
           POSTGRES_DB: tree_queries
           POSTGRES_USER: tree_queries
