--- a/tox.ini
+++ b/tox.ini
@@ -5,14 +5,14 @@ envlist =
     readme
     py{36,37}-dj{22,31,32}-{sqlite,postgresql,mysql}
     py{38,39}-dj{22,31,32,40,main}-{sqlite,postgresql,mysql}
-    py{310}-dj{40,main}-{sqlite,postgresql,mysql}
+    py{310}-dj{32,40,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
     dj22: Django==2.2.*
     dj31: Django==3.1.*
     dj32: Django>=3.2,<4.0
-    dj40: Django>=4.0a1,<4.1
+    dj40: Django>=4.0,<4.1
     postgresql: psycopg2-binary
     mysql: mysqlclient
     djmain: https://github.com/django/django/archive/main.tar.gz
