Set the mysql/postgresql vars for djmain too

--- a/tox.ini
+++ b/tox.ini
@@ -38,13 +38,13 @@ commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage report -m
 
-[testenv:py{36,37,38,39,310}-dj{22,31,32,40}-postgresql]
+[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{36,37,38,39,310}-dj{22,31,32,40}-mysql]
+[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
