--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -216,4 +216,4 @@ jobs:
         python -m pip install --upgrade tox
 
     - name: Test with tox
-      run: tox -e style,readme
+      run: tox -e readme
