setup.cfg update

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
     Topic :: Software Development
 
@@ -32,20 +33,20 @@ python_requires = >=3.6
 include_package_data = True
 zip_safe = False
 
-[options.extras_require]
-tests =
-    coverage
-
 [options.packages.find]
 exclude =
     tests
-    testapp
+    tests.*
+
+[options.extras_require]
+tests =
+    coverage
 
 [coverage:run]
 branch = True
 include =
     *tree_queries*
+    *testapp*
 omit =
     *migrations*
-    *tests*
     *.tox*
