--- a/tox.ini
+++ b/tox.ini
@@ -2,19 +2,16 @@
 envlist =
     docs
     readme
-    py{36,37}-dj{22,31,32}-{sqlite,postgresql,mysql}
-    py{38,39}-dj{22,31,32,40,main}-{sqlite,postgresql,mysql}
-    py{310}-dj{32,40,main}-{sqlite,postgresql,mysql}
+    py{38,39,310}-dj{32,40,41,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
-    dj22: Django==2.2.*
-    dj31: Django==3.1.*
     dj32: Django>=3.2,<4.0
     dj40: Django>=4.0,<4.1
+    dj41: Django>=4.1,<4.2
+    djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
-    djmain: https://github.com/django/django/archive/main.tar.gz
     coverage
 passenv=
     CI
@@ -38,19 +35,19 @@ commands =
     coverage run tests/manage.py test -v 2 {posargs:testapp}
     coverage report -m
 
-[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-postgresql]
+[testenv:py{38,39,310}-dj{32,40,41,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-mysql]
+[testenv:py{38,39,310}-dj{32,40,41,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{36,37,38,39,310}-dj{22,31,32,40,main}-sqlite]
+[testenv:py{38,39,310}-dj{32,40,41,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
@@ -69,8 +66,6 @@ skip_install = true
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310
