--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: ".yarn/|yarn.lock|\\.min\\.(css|js)$"
+exclude: ".yarn/|yarn.lock"
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -13,7 +13,7 @@ repos:
       - id: pyupgrade
         args: [--py38-plus]
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.8.0
+    rev: 1.9.0
     hooks:
       - id: django-upgrade
         args: [--target-version, "3.2"]
@@ -31,9 +31,21 @@ repos:
     hooks:
       - id: flake8
         args: ["--ignore=E203,E501,W503"]
+        additional_dependencies:
+          - flake8-bugbear
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.0.0-alpha.0
     hooks:
       - id: prettier
-        args: [--list-different, --no-semi]
+        args: [--list-different, --no-semi, "--trailing-comma=es5"]
         exclude: "^conf/|.*\\.html$"
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v8.23.0
+    hooks:
+      - id: eslint
+        additional_dependencies:
+          - eslint@^8.23.0
+          - eslint-config-prettier
+          - "@babel/core"
+          - "@babel/eslint-parser"
+          - "@babel/preset-env"
