Drop coverage reporting from the GitHub action for now

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,6 @@ deps =
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
-    coverage
 passenv=
     CI
     DB_BACKEND
@@ -32,8 +31,7 @@ setenv =
     DB_PASSWORD =  {env:DB_PASSWORD:tree_queries}
 pip_pre = True
 commands =
-    coverage run tests/manage.py test -v 2 {posargs:testapp}
-    coverage report -m
+    python tests/manage.py test -v 2 {posargs:testapp}
 
 [testenv:py{38,39,310}-dj{32,40,41,main}-postgresql]
 setenv =
