--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,14 @@
 envlist =
     docs
     readme
-    py{38,39,310}-dj{32,40,41,main}-{sqlite,postgresql,mysql}
+    py{38,39,310}-dj{32,40,41,42,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
     dj32: Django>=3.2,<4.0
     dj40: Django>=4.0,<4.1
     dj41: Django>=4.1,<4.2
+    dj42: Django>=4.2a1,<5.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
@@ -33,19 +34,19 @@ pip_pre = True
 commands =
     python tests/manage.py test -v 2 {posargs:testapp}
 
-[testenv:py{38,39,310}-dj{32,40,41,main}-postgresql]
+[testenv:py{38,39,310}-dj{32,40,41,42,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{38,39,310}-dj{32,40,41,main}-mysql]
+[testenv:py{38,39,310}-dj{32,40,41,42,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{38,39,310}-dj{32,40,41,main}-sqlite]
+[testenv:py{38,39,310}-dj{32,40,41,42,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
