Stop running djmain tests with Python 3.8 and 3.9
Refs #52.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist =
     docs
     readme
-    py{38,39,310}-dj{32,40,41,42,main}-{sqlite,postgresql,mysql}
+    py{38,39,310}-dj{32,40,41,42}-{sqlite,postgresql,mysql}
+    py{310}-dj{32,40,41,42,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
