--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,14 @@
 envlist =
     docs
     py{38,39,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
-    py{310,311}-dj{32,41,42,main}-{sqlite,postgresql,mysql}
+    py{310,311,312}-dj{32,41,42,50,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
     dj32: Django>=3.2,<4.0
     dj41: Django>=4.1,<4.2
     dj42: Django>=4.2,<5.0
+    dj50: Django>=5.0,<5.1
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
@@ -33,19 +34,19 @@ pip_pre = True
 commands =
     python tests/manage.py test -v 2 {posargs:testapp}
 
-[testenv:py{38,39,310}-dj{32,41,42,main}-postgresql]
+[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{38,39,310}-dj{32,41,42,main}-mysql]
+[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{38,39,310}-dj{32,41,42,main}-sqlite]
+[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
@@ -63,6 +64,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [gh-actions:env]
 DB_BACKEND =
