--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     docs
     py{38,39,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
-    py{310,311,312}-dj{32,41,42,50,main}-{sqlite,postgresql,mysql}
+    py{310,311,312}-dj{32,41,42,50,51,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
@@ -10,6 +10,7 @@ deps =
     dj41: Django>=4.1,<4.2
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
+    dj51: Django>=5.1b1,<5.2
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
