Test the behavior of .descendants() queries

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     dj41: Django>=4.1,<4.2
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
-    dj51: Django>=5.1b1,<5.2
+    dj51: Django>=5.1,<5.2
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
