--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist =
     docs
     py{38,39,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
     py{310,311,312}-dj{32,41,42,50,51,main}-{sqlite,postgresql,mysql}
-    py{313}-dj{51,main}-{sqlite,postgresql,mysql}
+    py{312,313}-dj{51,52,main}-{sqlite,postgresql,mysql}
 
 [testenv]
 deps =
@@ -12,6 +12,7 @@ deps =
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
     dj51: Django>=5.1,<5.2
+    dj52: Django>=5.2a1,<6.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
@@ -36,19 +37,19 @@ pip_pre = True
 commands =
     python tests/manage.py test -v 2 {posargs:testapp}
 
-[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-postgresql]
+[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-postgresql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = postgresql
     DB_PORT = {env:DB_PORT:5432}
 
-[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-mysql]
+[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-mysql]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = mysql
     DB_PORT = {env:DB_PORT:3306}
 
-[testenv:py{38,39,310,311,312}-dj{32,41,42,50,main}-sqlite]
+[testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-sqlite]
 setenv =
     {[testenv]setenv}
     DB_BACKEND = sqlite3
@@ -67,6 +68,7 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
 
 [gh-actions:env]
 DB_BACKEND =
