Django@main requires Python 3.12 or better

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     docs
     py{38,39,310}-dj{32,41,42}-{sqlite,postgresql,mysql}
-    py{310,311,312}-dj{32,41,42,50,51,main}-{sqlite,postgresql,mysql}
+    py{310,311,312}-dj{32,41,42,50,51}-{sqlite,postgresql,mysql}
     py{312,313}-dj{51,52,main}-{sqlite,postgresql,mysql}
 
 [testenv]
