--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ deps =
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
+    pytest
+    pytest-django
 passenv=
     CI
     DB_BACKEND
@@ -27,15 +29,16 @@ passenv=
     GITHUB_*
     SQL
 setenv =
-    PYTHONPATH = {toxinidir}
+    PYTHONPATH = {toxinidir}:{toxinidir}/tests
     PYTHONWARNINGS = d
+    DJANGO_SETTINGS_MODULE = testapp.settings
     DB_NAME = {env:DB_NAME:tree_queries}
     DB_USER = {env:DB_USER:tree_queries}
     DB_HOST = {env:DB_HOST:localhost}
     DB_PASSWORD =  {env:DB_PASSWORD:tree_queries}
 pip_pre = True
 commands =
-    python tests/manage.py test -v 2 {posargs:testapp}
+    pytest {posargs}
 
 [testenv:py{38,39,310,311,312,313}-dj{32,41,42,50,51,52,main}-postgresql]
 setenv =
