django-tree-queries 0.20

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
     dj42: Django>=4.2,<5.0
     dj50: Django>=5.0,<5.1
     dj51: Django>=5.1,<5.2
-    dj52: Django>=5.2a1,<6.0
+    dj52: Django>=5.2,<6.0
     djmain: https://github.com/django/django/archive/main.tar.gz
     postgresql: psycopg2-binary
     mysql: mysqlclient
